update css, layout

--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
@@ -1,5 +1,5 @@
-<div class="container patient-dates" *ngIf="patient">
-  <div class="container-column container-left date-summary">
+<div class="container-column patient-dates" *ngIf="patient">
+  <div class="container container-left date-summary">
     <div class="header-label" *ngIf="patient.outcome !== 'contact'">
       Initial Symptoms
     </div>
