--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
@@ -2,11 +2,11 @@
 @import '../../../sass/material-theme.scss';
 
 .patient-dates {
-  margin-left: 100px;
+  // margin-left: 100px;
 }
 
 .date-summary {
-  margin-right: 15px;
+  // margin-right: 15px;
 }
 
 .header-label {
@@ -22,7 +22,7 @@
 
 .infection-year {
   padding: 3px 15px;
-  font-size: 1.25em;
+  font-size: 1.15em;
   text-transform: uppercase;
   font-weight: 400;
   text-align: center;
