update css, layout

--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
@@ -1,4 +1,5 @@
 <div class="container-column patient-dates" *ngIf="patient">
+  <h4 class="patient">Dates</h4>
   <div class="container container-left date-summary">
     <div class="header-label" *ngIf="patient.outcome !== 'contact'">
       Initial Symptoms
