--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -461,6 +461,7 @@ svg-icon.country-icon {
 
 h4.patient {
   margin-bottom: 0;
+  margin-top: 0.5em;
   text-transform: capitalize;
   border-bottom: 1px solid $default-color;
 }
