--- a/sample-viewer/src/app/patient-page/patient-page.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-page.component.scss
@@ -124,6 +124,11 @@
   background: $grey-200 !important;
 }
 
+.mat-expansion-panel-content {
+  background: $grey-50 !important;
+}
+
+
 .panel-title {
   // padding: 5px 15px;
   // margin-top: 10px;
