--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.scss
@@ -54,8 +54,9 @@
   justify-content: space-between;
 }
 
-.hospital-dates {
-  margin-right: 15px;
+.hospital-spans {
+  margin-left: 20px;
+  align-items: flex-end;
 }
 
 .variable-label {
