update css, layout

--- a/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
+++ b/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
@@ -1,6 +1,6 @@
 <div class="patient-elisas">
 
-  <h4 class="patient-elisa" id="elisa">ELISA results</h4>
+  <!-- <h4 class="patient-elisa" id="elisa">ELISA results</h4> -->
 
   <div class="preview-sample" *ngIf="patient.elisa; else no_data">
     <table mat-table [dataSource]="elisaSource">
