--- a/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.html
+++ b/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.html
@@ -1,13 +1,8 @@
-<div class="patient symptoms" *ngIf="patient.symptoms">
-
-  <h4 class="patient" id="symptoms">
-    <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>
-    Observed symptoms</h4>
+<div class="patient symptoms" id="symptoms" *ngIf="patient.symptoms">
 
   <div class="symptom-timepoint" *ngFor="let timepoint of patient.symptoms">
-    <div class="timepoint">
-      at {{ timepoint.timepoint }}:
-    </div>
+    <h4 class="patient timepoint">
+      <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i> {{ timepoint.timepoint }}</h4>
 
     <table class="symptom-list">
       <tr *ngFor="let symptom of symptom_keys">
@@ -18,7 +13,7 @@
 
           <span class="fa-stack fa-1x symptom-false" *ngIf="timepoint.symptoms[symptom] === false">
             <i class="fas fa-circle fa-stack-1x"></i>
-            <i class="far fa-circle fa-stack-1x" ></i>
+            <i class="far fa-circle fa-stack-1x"></i>
           </span>
 
 
@@ -28,8 +23,8 @@
           </span>
 
           <span class="symptom-unavailable" *ngIf="!timepoint.symptoms[symptom] && timepoint.symptoms[symptom] !== false">
-          N/A
-        </span>
+            N/A
+          </span>
 
         </td>
       </tr>
