--- a/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-symptoms/patient-symptoms.component.scss
@@ -1,12 +1,13 @@
 @import '../../../sass/material-theme.scss';
+@import '../../../sass/variables.scss';
 
 .symptom-true {
   & .fas {
-    color: #dedae7;
+    color: $grey-300;
   }
 
   & .far {
-    color: #8c77bb;
+    color: $dev-theme;
   }
 }
 
