--- a/sample-viewer/src/app/file-list/file-list.component.scss
+++ b/sample-viewer/src/app/file-list/file-list.component.scss
@@ -1,12 +1,11 @@
 @import '../../sass/variables.scss';
 @import '../../sass/material-theme.scss';
-
-
 // --- Fonts ---
 h4 {
   margin: 0.5em 0 0.25em;
 }
 // --- Links ---
+
 a {
   cursor: pointer;
 }
@@ -34,6 +33,7 @@ a:hover {
   color: $grey-400;
 }
 // --- Activation upon selection ---
+
 .inactive {
   opacity: 0.4;
 }
@@ -45,4 +45,8 @@ a:hover {
 .highlight {
   background: #42A948;
   /* green */
+}
+
+.mat-table, .mat-paginator {
+  background: inherit !important;
 }
